# dlpscan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  KEYWORDS.md  MANIFEST.in  PATTERNS.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py  test5.py
.github/actions/dlpscan/: action.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
benchmarks/: bench.py
dlpscan/: __init__.py  ahocorasick.py  allowlist.py  api.py  async_scanner.py  audit.py  batch.py  cache.py  compliance.py  config.py  context_patterns.py  countmin.py  cuckoo.py  edm.py  entropy.py  env_config.py  exceptions.py  extractors.py  hooks.py  hyperloglog.py  input.py  input_guard.py  logging_config.py  lsh.py  metrics.py  models.py  observability.py  ocr.py  patterns.py  pipeline.py  plugins.py  policy.py  profiles.py  rabin_karp.py  rate_limit.py  rulesets.py  scanner.py  scanner_backup.py  session.py  siem.py  (+3 more)
dlpscan/context/: __init__.py
dlpscan/context/custom/: cloud_providers.py  code_platforms.py  messaging_services.py  payment_services.py
dlpscan/context/generic/: banking.py  classification_labels.py  contact_info.py  credit_cards.py  cryptocurrency.py  dates.py  pii_identifiers.py  secrets.py  urls.py  vehicles.py
dlpscan/context/regions/: africa.py  asia_pacific.py  europe.py  latin_america.py  middle_east.py  north_america.py
dlpscan/guard/: __init__.py  core.py  enums.py  presets.py  rbac.py  transforms.py  vault_backends.py
dlpscan/patterns/: __init__.py
dlpscan/patterns/custom/: cloud_providers.py  code_platforms.py  messaging_services.py  payment_services.py
dlpscan/patterns/generic/: banking.py  classification_labels.py  contact_info.py  credit_cards.py  cryptocurrency.py  dates.py  pii_identifiers.py  secrets.py  urls.py  vehicles.py
dlpscan/patterns/regions/: africa.py  asia_pacific.py  europe.py  latin_america.py  middle_east.py  north_america.py
dlpscan/scanner/: __init__.py  _config.py  _context.py  _core.py  _io.py  _redaction.py  _scoring.py  _timeout.py  _validation.py
docs/: README.md  advanced_techniques.md  evasion_defenses.md  evasion_techniques.md  index.md
docs/baselines/: confidential-documents.md  internal-financial.md  pci.md  phi.md  pii.md  source-code-secrets.md
docs/enterprise/: api.md  rate-limiting.md  security.md
docs/guide/: inputguard.md  ocr.md  policy.md  profiles.md  rulesets.md  scanning.md  streaming.md  transforms.md
docs/keywords/custom/: cloud_provider_secrets.md  cloud_providers.md  code_platform_secrets.md  code_platforms.md  messaging_service_secrets.md  messaging_services.md  payment_service_secrets.md  payment_services.md
docs/keywords/generic/: authentication_tokens.md  banking.md  banking_and_financial.md  banking_authentication.md  biometric_identifiers.md  card_expiration_dates.md  card_track_data.md  check_and_micr_data.md  classification_labels.md  contact_info.md  contact_information.md  corporate_classification.md  credit_card_numbers.md  credit_cards.md  cryptocurrency.md  customer_financial_data.md  data_classification_labels.md  dates.md  device_identifiers.md  education_identifiers.md  employment_identifiers.md  financial_regulatory_labels.md  generic_secrets.md  geolocation.md  insurance_identifiers.md  internal_banking_references.md  legal_identifiers.md  loan_and_mortgage_data.md  medical_identifiers.md  pci_sensitive_data.md  personal_identifiers.md  pii_identifiers.md  postal_codes.md  primary_account_numbers.md  privacy_classification.md  privileged_information.md  property_identifiers.md  rbc_classification.md  regulatory_identifiers.md  secrets.md  (+8 more)
docs/keywords/regions/: africa.md  asia_pacific.md  europe.md  latin_america.md  middle_east.md  north_america.md
docs/patterns/custom/: cloud_provider_secrets.md  cloud_providers.md  code_platform_secrets.md  code_platforms.md  messaging_service_secrets.md  messaging_services.md  payment_service_secrets.md  payment_services.md
docs/patterns/generic/: authentication_tokens.md  banking.md  banking_and_financial.md  banking_authentication.md  biometric_identifiers.md  card_expiration_dates.md  card_track_data.md  check_and_micr_data.md  classification_labels.md  contact_info.md  contact_information.md  corporate_classification.md  credit_card_numbers.md  credit_cards.md  cryptocurrency.md  customer_financial_data.md  data_classification_labels.md  dates.md  device_identifiers.md  education_identifiers.md  employment_identifiers.md  financial_regulatory_labels.md  generic_secrets.md  geolocation.md  insurance_identifiers.md  internal_banking_references.md  legal_identifiers.md  (+21 more)
examples/: basic_usage.py  django_example.py  fastapi_example.py  flask_example.py
helm/dlpscan/: values.yaml
src/: api.rs  audit.rs  batch.rs  cache.rs  compliance.rs  config.rs  edm.rs  extractors.rs  lib.rs  lsh.rs  main.rs  metrics.rs  models.rs  plugins.rs  policy.rs  siem.rs  webhooks.rs
src/allowlist/: mod.rs
src/context/: keywords.rs  mod.rs
src/guard/: mod.rs  obfuscate.rs  presets.rs  tokenize.rs
src/normalize/: confusables.rs  mod.rs
src/patterns/: mod.rs
src/pipeline/: mod.rs
src/scanner/: mod.rs
src/streaming/: mod.rs
tests/: bench_context_backends.py  benchmarks.py  test.py  test2.py  test_integration.py  unit.py
(+8 files in other folders)
